# imd_feature_engineering

./: .gitignore  README.md  main.py  pyproject.toml  recreate.py  scratch.py
configs/: all_features_pca_20.py  all_features_pca_50.py  all_features_unreduced.py  mixed.py  mult_config_example.py  selected_75_unreduced.py  template.py
data/input/: 2019_imd_target.parquet  2025_imd_target.parquet  imd_target.parquet  weights.npy
data/output/: all_features_pca_20_1bd1256f_config.json  all_features_pca_50_5921e0d9_config.json  all_features_pca_50_8efbe229_config.json  all_features_unreduced_dab45356_config.json  all_features_unreduced_e2827a32_config.json  calibrated_reduction_7855ce10_config.json  calibrated_reduction_a5381280_config.json  calibrated_reduction_v2_0da61fc9_config.json  compact_30_3b29b236_config.json  domain_proxy_9a34a666_config.json  engineered_rates_19a9e423_config.json  engineered_rates_8821352e_config.json  engineered_rates_v2_c3ad0464_config.json  grid_factor_analysis_3_86be24c8_config.json  grid_factor_analysis_3_cf7d63fd_config.json  grid_factor_analysis_5_db01237c_config.json  grid_factor_analysis_8_60e04ce3_config.json  grid_pca_3_8b607713_config.json  grid_pca_3_cefe05c5_config.json  grid_pca_5_ffa992c3_config.json  grid_pca_8_a9290db4_config.json  grid_pca_8_e7954256_config.json  (+20 more)
imd_features/: config.py  cross_validate.py  diagnostic.py  evaluate.py  inspect.py  interpolate.py  process.py  spatial_utils.py
models/: 2019_fitted_scaler.joblib  2019_model.joblib  2025_fitted_scaler.joblib  2025_model.joblib
notebooks/: 0_demo_comparison.ipynb  0_demo_create_and_inspect_featureset.ipynb  0_demo_evaluation.ipynb  0_demo_load_and_inspect_featureset.ipynb  1_leaderboard.ipynb  2_new_configs.ipynb  3_new_new_configs.ipynb  4_learning_rate_experiment.ipynb  5_learning_rate_experiment_multi_city.ipynb  6_spatial_cv.ipynb  7_ridge_vs_slx.ipynb  interpolation_modelling.ipynb  production_interpolation_of_bristol_lsoas.ipynb
(+10 files in other folders)
