[project]
name = "imd-feature-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.3",
    "polars>=1.39.0",
    "project-paths>=1.1.1",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]
