[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imd_features"]

[project]
name = "imd-feature-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "numpy>=2.4.3",
    "pandoc>=2.4",
    "polars>=1.39.0",
    "project-paths>=1.1.1",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = ["icecream>=2.1.10", "ruff>=0.15.6"]


[tool.project-paths]
output = "./data/output"
input_file = "./data/input/combined_data.parquet"
reference = "./data/input/imd_target.parquet"
spatial_weights = "./data/input/spatial_weights.npy"
cluster_groups = "./data/input/cluster_groups.npy"
polygons = "./data/reference/lsoa_boundaries.gpkg"
lads = "./data/reference/lsoa_lookup.csv"
